got the fallback image to work for posts w/o a featured image in the gallery. had to update it in infiniteScroll. updated it PostsGallery, too

--- a/src/components/PostsGallery.astro
+++ b/src/components/PostsGallery.astro
@@ -11,7 +11,7 @@ const { posts, total, totalPages } = await getPosts()
                 <img 
                     class="thumb-img" 
                     loading="lazy" 
-                    src={post.jetpack_featured_media_url} 
+                    src={post.jetpack_featured_media_url || "/no-featured-img.webp"} 
                     alt={post.title.rendered}
                 />
                 <div class="thumb-details">
