moved infiniteScroll.js to /public/scripts

--- a/src/components/PostsGallery.astro
+++ b/src/components/PostsGallery.astro
@@ -28,7 +28,7 @@ const { posts, total, totalPages } = await getPosts()
 <p id="loading" style="text-align:center; display:none;">Loading more posts…</p>
 <p id="end" style="text-align:center; display:none;">You've reached the end!</p>
 
-<script src="../scripts/infiniteScroll.js"></script>
+<script src="/scripts/infiniteScroll.js" type="module"></script>
 
 <style is:global>
     .post-gallery {
