added prerender to PostsGallery & [slug] for SSG pages

--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -10,6 +10,7 @@ export async function getStaticPaths() {
         props: { post },
     }))
 }
+export const prerender = true
 
 const { post }: { post: any } = Astro.props
 const pageTitle = post.title.rendered
