--- a/src/components/PostsGallery.astro
+++ b/src/components/PostsGallery.astro
@@ -1,7 +1,7 @@
 ---
 import { getPosts } from "../scripts/getPosts"
 import { decode } from "entities"
-
+export const prerender = true
 const { posts, total, totalPages } = await getPosts()
 ---
 <section id="post-gallery" class="post-gallery" data-total-pages={totalPages}>
