[slug]: changed .wp-block-image img from max-width: 100% to width: 100%

--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -149,7 +149,7 @@ const pageTitle = post.title.rendered
 
     :global(.wp-block-image img) {
         display: block;
-        max-width: 100%;
+        width: 100%;
         height: auto;
         object-fit: contain;
     }
