footer: added margin-top

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,7 +4,7 @@
 
 <style>
     footer {
-        
+        margin-top: 5rem;
         padding: 2.5rem 0;
         background: #28282B;
         color: white;
