[slug]: added bottom-margin to code blocks

--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -72,7 +72,7 @@ const pageTitle = post.title.rendered
 /* This is why we need :global & a class to target them but not spill out */
 
     :global(.post-content) {
-        margin: 5rem auto;
+        margin: 4rem auto 5rem;
         padding: 0 1rem;
         max-width: 800px;
     }
@@ -117,7 +117,7 @@ const pageTitle = post.title.rendered
         display: block;
         background: #F2F2F2;
         padding: 1rem;
-        margin: auto;
+        margin: 1rem auto;
         width: 90%;
         text-wrap: wrap;
         word-wrap: break-word;
