[slug]: added styles to .wp-block-cover img

--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -163,6 +163,11 @@ const pageTitle = post.title.rendered
         object-fit: contain;
     }
 
+    :global(.wp-block-cover img) {
+        width: 100%;
+        height: 100%;
+    }
+
     :global(.wp-block-list) {
         list-style-type: square;
         width: 90%;
