PostsGallery: adjusted margin for .end & .loading. footer: adjusted margin

--- a/src/components/PostsGallery.astro
+++ b/src/components/PostsGallery.astro
@@ -28,7 +28,7 @@ const { posts, total, totalPages } = await getPosts()
 <div id="scroll-trigger" style="height: 1px;"></div>
 
 <p id="loading" class="loading" style="text-align:center; display:none;">Loading more posts…</p>
-<p id="end" class="end" style="text-align:center; display:none;">You've reached the end!</p>
+<p id="end" class="end" style="text-align:center; display: none;">You've reached the end!</p>
 
 <script src="/scripts/infiniteScroll.js" type="module"></script>
 
@@ -101,6 +101,7 @@ const { posts, total, totalPages } = await getPosts()
         background: #28282B;
         color: white;
         padding: 1rem;
+        margin: 0;
     }
 
     /* MEDIA QUERIES */
