[slug] reduced font-size for .category-tag

--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -91,6 +91,7 @@ const pageTitle = post.title.rendered
         display: inline-block;
         background: #AB1226;
         color: white;
+        font-size: .75rem;
         padding: .5rem .75rem;
         margin: .1rem .25rem;
         border-radius: .5rem;
